# miner

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md
.github/workflows/: build.yaml  publish.yaml
src/: BETH.abi.json  Staking.abi.json  WORM.abi.json  constants.rs  fp.rs  logic.rs  main.rs  networks.rs  poseidon.rs  server.rs  server3.rs  utils.rs
src/cli/: burn.rs  claim.rs  generate_witness.rs  info.rs  ls.rs  mine.rs  mod.rs  participate.rs  recover.rs  spend.rs  utils.rs
src/polling/: api.rs  burn_logic.rs  handlers.rs  job.rs  mod.rs  state.rs  types.rs  utils.rs
src/server/: handlers.rs  mod.rs  proof_logic.rs  queue.rs  types.rs  verify_proof.rs  worker.rs
