[package]
name = "worm-miner"
version = "0.1.0"
edition = "2024"

[dependencies]
alloy = { version = "1.0.17", features = ["getrandom", "rlp"] }
alloy-rlp = "0.3.12"
anyhow = "1.0.98"
ff = { version = "0.13.1", features = ["derive"] }
lazy_static = "1.5.0"
num-bigint = "0.4.6"
num-traits = "0.2.19"
reqwest = "0.12.22"
serde = "1.0.219"
serde_json = "1.0.140"
structopt = "0.3.26"
tempfile = "3.20.0"
tokio = { version = "1.46.1", features = ["full"] }
