[package]
name = "worm-miner"
version = "0.1.4"
edition = "2024"

[dependencies]
alloy = { version = "1.0.17", features = ["getrandom", "rlp"] }
alloy-rlp = "0.3.12"
anyhow = "1.0.98"
axum = "0.8.4"
axum-test = "18.1.0"
ff = { version = "0.13.1", features = ["derive"] }
homedir = "0.3.5"
lazy_static = "1.5.0"
num-bigint = "0.4.6"
num-traits = "0.2.19"
reqwest = "0.12.22"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
structopt = "0.3.26"
tempfile = "3.20.0"
tokio = { version = "1.46.1", features = ["full"] }
worm-witness-gens = { git = "https://github.com/worm-privacy/witness" }
tower = "0.5"
dotenvy = "0.15"
tower-http = { version = "0.5", features = ["trace","cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
redis = { version = "0.25", features = ["tokio-comp", "connection-manager"] }
uuid = { version = "1", features = ["v4", "serde"] }